[package]
name = "custom-name-color"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
mhw_toolkit = { path = "../mhw-toolkit", features = ["logger", "hooks"] }
log = "0.4"
once_cell = "1.19"
windows = { version = "0.58", features = [
    "Win32_System_SystemServices",
    "Win32_System_Memory",
] }
anyhow = "1.0"
minhook-sys = "0.1"
strum = { version = "0.26", features = ["derive"] }

[features]

[build-dependencies]
winres = "0.1"
